Cập nhật favicon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Bang Nguyen
+title: 🚀Bằng Nguyễn Duy🚀
 subtitle: The only source of knowledge is experience.
 meta-title: "Hi, I'm Bang"
 bigimg:
