Cập nhật thêm hình ảnh cho SCRUM MASTER.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: 🚀Bằng Nguyễn Duy🚀
+title: Bằng Nguyễn
 subtitle: The only source of knowledge is experience.
 meta-title: "Hi, I'm Bang"
 bigimg:
