--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ title: Bằng Nguyễn
 subtitle: The only source of knowledge is experience.
 meta-title: "Hi, I'm Bang"
 bigimg:
-- "/img/My_Picture/DalatView_xedap_ngang.jpg" : "Da Lat City"
-- "/img/My_Picture/Dalat_NguyenTrai.jpg" : "Da Lat City"
-- "/img/My_Picture/Baria_garden.jpg" : "Bà Rịa City"
-- "/img/My_Picture/phieu_dalat_2020.jpg" : "Da Lat City"
+- "/img/My_Picture/DalatView_xedap_ngang.webp" : "Da Lat City"
+- "/img/My_Picture/Dalat_NguyenTrai.webp" : "Da Lat City"
+- "/img/My_Picture/Baria_garden.webp" : "Bà Rịa City"
+- "/img/My_Picture/phieu_dalat_2020.webp" : "Da Lat City"
 ---
 <!-- Data typed chạy chữ.  -->
 <div class="typed_caption">
