--- a/index.html
+++ b/index.html
@@ -17,21 +17,16 @@ bigimg:
 <!-- JS typed chạy chữ.  -->
 <script src="/js/Typed.js"></script> 
 
-
 <!-- Recent Posts -->
 <div class="thiep_moi">
   <h2 style="text-align: center;">Trân trọng kính mời!</h2>
-  <p style="text-align: center;">18H00 Chủ Nhật<br />
+  <p style="text-align: center;">18h00 Chủ Nhật<br />
     05/02/2023<br />
     Tức ngày 15 tháng 1 năm Quý Mão<br />
     <br />
     Tại khách sạn: ... ... ...<br />
     Địa chỉ: ... . .&nbsp; &nbsp;.... ... ..</p>
-  <p style="text-align: center;">&nbsp;</p>
-  <p style="text-align: center;">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3923.063314959748!2d107.17820831551269!3d10.495675167181254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175734e8e55ffc1%3A0x8f381b7a4e22cb5a!2zTmjDoCBow6BuZyBCw6EgSMO5bmc!5e0!3m2!1svi!2s!4v1670474998212!5m2!1svi!2s" width="300" height="200" style="border-radius: 15px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-  </p>
-  
+  <p style="text-align: center;">&nbsp;</p>  
 </div>
 <!-- Chèn khoảng trống -->
 <div class="spacer"></div>
