--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@ bigimg:
 - "/img/Wedding/wedding-background.jpg" : "Save the date"
 ---
 <!-- Data typed chạy chữ.  -->
-<div class="typed_caption">
+<!-- <div class="typed_caption">
   <div class="col-sm-12">
     <div class="text-center">
       <h2><span id="word"></span></h2>
     </div>
   </div>
-</div>
+</div> -->
 <!-- JS typed chạy chữ.  -->
-<script src="/js/Typed.js"></script> 
+<!-- <script src="/js/Typed.js"></script>  -->
 
 <!-- Recent Posts -->
 <div class="thiep_moi">
   <h2 style="text-align: center;">Trân trọng kính mời!</h2>
-  <p style="text-align: center;">18h00 Chủ Nhật<br />
+  <p style="text-align: center;">11h30 Chủ Nhật<br />
     05/02/2023<br />
-    Tức ngày 15 tháng 1 năm Quý Mão<br />
+    Nhằm ngày 15 tháng 1 năm Quý Mão<br />
     <br />
-    Tại khách sạn: ... ... ...<br />
-    Địa chỉ: ... . .&nbsp; &nbsp;.... ... ..</p>
+    Nhà hàng ... ... ...<br />
+    Địa chỉ: ... ..... ... ..</p>
   <p style="text-align: center;">&nbsp;</p>  
 </div>
 <!-- Chèn khoảng trống -->
