--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@ bigimg:
 </div> -->
 <!-- JS typed chạy chữ.  -->
 <!-- <script src="/js/Typed.js"></script>  -->
+<div class="audio_mp3">
+  <p style="text-align: center;">
+    Kiệu Hoa - Còn Gì Mà Tính Em Ơi
+  </p>
+  <audio controls autoplay muted loop>
+    <source src="/img/KieuHoa.mp3" type="audio/mpeg">
+  </audio>
+</div>
 
+<br>
+<br>
 <!-- Recent Posts -->
 <div class="thiep_moi">
   <h2 style="text-align: center;">Lễ Thành Hôn</h2>
@@ -61,10 +71,6 @@ bigimg:
     Địa chỉ: 126A Nguyễn Tất Thành, Phước Nguyễn, Bà Rịa, Bà Rịa - Vũng Tàu</p>
 </div>
 
-<audio controls autoplay muted loop>
-  <source src="/img/KieuHoa.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
 
 <!-- Chèn khoảng trống -->
 <div class="spacer"></div>
