--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ bigimg:
   <p style="text-align: center;">
     Kiệu Hoa - Còn Gì Mà Tính Em Ơi
   </p>
-  <audio controls autoplay muted loop>
+  <audio controls autoplay loop>
     <source src="/img/KieuHoa.mp3" type="audio/mpeg">
   </audio>
 </div>
