--- a/index.html
+++ b/index.html
@@ -27,6 +27,38 @@ bigimg:
 
 <br>
 <br>
+
+<!-- Recent Posts -->
+<div class="thiep_moi">
+  <h2 style="text-align: center;">Lễ Vu Quy</h2>
+  <p style="text-align: center;">
+    Được tổ chức vào lúc 11h00 Thứ 6<br />
+    10/02/2023<br />
+    Nhằm ngày 20 tháng 1 năm Quý Mão<br />
+    Tại nhà gái - Nhà thờ Châu Pha<br />
+    <br />
+    Sự hiện diện của quý khách là niềm vinh hạnh của gia đình chúng tôi<br />
+  </p>
+  
+  <table class="thiep_moi_thanh_hon" style="border-collapse: collapse; width: 100%;" border="1">
+    <tbody>
+    <tr>
+    <td style="width: 45%; text-align: center;">Nh&agrave; G&aacute;i</td>
+    <td style="width: 10%; text-align: center;font-size: 40px;">👩‍❤️‍💋‍👨</td>
+    <td style="width: 45%; text-align: center;">Nh&agrave; Trai</td>
+    </tr>
+    <tr>
+    <td style="width: 45%; text-align: center;">Nguyễn Văn A<br />Cao Thị B</td>
+    <td style="width: 10%; text-align: center;font-size: 40px;">💕</td>
+    <td style="width: 45%; text-align: center;">Nguyễn Văn A<br />Cao Thị B</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+
+<br>
+<br>
+
 <!-- Recent Posts -->
 <div class="thiep_moi">
   <h2 style="text-align: center;">Lễ Thành Hôn</h2>
@@ -34,6 +66,7 @@ bigimg:
     Được tổ chức vào hồi 11h00 Chủ Nhật<br />
     12/02/2023<br />
     Nhằm ngày 22 tháng 1 năm Quý Mão<br />
+    Tại nhà trai - Tại gia Long Toàn, Bà Rịa<br />
     <br />
     Sự hiện diện của quý khách là niềm vinh hạnh của gia đình chúng tôi<br />
   </p>
@@ -62,7 +95,7 @@ bigimg:
 <div class="thiep_moi">
   <h2 style="text-align: center;">Trân trọng kính mời!</h2>
   <p style="text-align: center;">
-    TỚI DỰ BỮA TRƯA THÂN MẬT CÙNG GIA ĐÌNH<br />
+    TỚI DỰ BỮA TRƯA THÂN MẬT CÙNG GIA ĐÌNH CHUNG TÔI<br />
     VÀO LÚC 11H30 Chủ Nhật<br />
     12/02/2023<br />
     Nhằm ngày 22 tháng 1 năm Quý Mão<br />
