--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@ bigimg:
 <!-- <script src="/js/Typed.js"></script>  -->
 <div class="audio_mp3">
   <p style="text-align: center;">
-    Kiệu Hoa - Còn Gì Mà Tính Em Ơi
+    "My whole world changed from the moment I met you<br />
+    And it would never be the same<br />
+    Felt like I knew that I'd always love you<br />
+    From the moment I heard your name"<br />
+  </p>
+  <p style="text-align: right;"></p>
+    I Do - 911<br />
   </p>
   <audio controls autoplay loop>
-    <source src="/img/KieuHoa.mp3" type="audio/mpeg">
+    <source src="/img/I_Do_911.mp3" type="audio/mpeg">
   </audio>
 </div>
 
@@ -35,7 +41,7 @@ bigimg:
     Được tổ chức vào lúc 11h00 Thứ 6<br />
     10/02/2023<br />
     Nhằm ngày 20 tháng 1 năm Quý Mão<br />
-    Tại nhà gái - Nhà thờ Châu Pha<br />
+    Tại nhà gái - Tư gia - Châu Pha, Phú Mỹ<br />
     <br />
     Sự hiện diện của quý khách là niềm vinh hạnh của gia đình chúng tôi<br />
   </p>
@@ -43,14 +49,17 @@ bigimg:
   <table class="thiep_moi_thanh_hon" style="border-collapse: collapse; width: 100%;" border="1">
     <tbody>
     <tr>
-    <td style="width: 45%; text-align: center;">Nh&agrave; G&aacute;i</td>
-    <td style="width: 10%; text-align: center;font-size: 40px;">👩‍❤️‍💋‍👨</td>
-    <td style="width: 45%; text-align: center;">Nh&agrave; Trai</td>
-    </tr>
-    <tr>
-    <td style="width: 45%; text-align: center;">Nguyễn Văn A<br />Cao Thị B</td>
-    <td style="width: 10%; text-align: center;font-size: 40px;">💕</td>
-    <td style="width: 45%; text-align: center;">Nguyễn Văn A<br />Cao Thị B</td>
+    <td style="width: 45%; text-align: center;">
+    <p>Nhà gái</p>
+    <p>Lưu Hữu Minh</p>
+    <p>Lê Thị Minh Phụng</p>
+    </td>
+    <td style="width: 10%; text-align: center;font-size: 60px;">💕</td>
+    <td style="width: 45%; text-align: center;">
+    <p>Nhà trai</p>
+    <p>Nguyễn Văn Bình</p>
+    <p>Cao Thị Hồng</p>
+    </td>
     </tr>
     </tbody>
   </table>
@@ -61,30 +70,47 @@ bigimg:
 
 <!-- Recent Posts -->
 <div class="thiep_moi">
-  <h2 style="text-align: center;">Lễ Thành Hôn</h2>
+  <h2 style="text-align: center;">Lễ Tân Hôn</h2>
   <p style="text-align: center;">
     Được tổ chức vào hồi 11h00 Chủ Nhật<br />
     12/02/2023<br />
     Nhằm ngày 22 tháng 1 năm Quý Mão<br />
-    Tại nhà trai - Tại gia Long Toàn, Bà Rịa<br />
+    Tại nhà trai - Tư gia Long Toàn, Bà Rịa<br />
     <br />
     Sự hiện diện của quý khách là niềm vinh hạnh của gia đình chúng tôi<br />
   </p>
   
-  <table class="thiep_moi_thanh_hon" style="border-collapse: collapse; width: 100%;" border="1">
+  <!-- <table class="thiep_moi_thanh_hon" style="border-collapse: collapse; width: 100%;" border="1">
     <tbody>
     <tr>
     <td style="width: 45%; text-align: center;">Nh&agrave; G&aacute;i</td>
     <td style="width: 10%; text-align: center;font-size: 40px;">👩‍❤️‍💋‍👨</td>
     <td style="width: 45%; text-align: center;">Nh&agrave; Trai</td>
-    </tr>
-    <tr>
-    <td style="width: 45%; text-align: center;">Nguyễn Văn A<br />Cao Thị B</td>
+    <td style="width: 45%; text-align: center;">Lưu Hữu Minh<br />Lê Thị Minh Phụng</td>
     <td style="width: 10%; text-align: center;font-size: 40px;">💕</td>
-    <td style="width: 45%; text-align: center;">Nguyễn Văn A<br />Cao Thị B</td>
+    <td style="width: 45%; text-align: center;">Nguyễn Văn Bình<br />Cao Thị Hồng</td>
+    </tr>
+    </tbody>
+  </table> -->
+
+  <table class="thiep_moi_thanh_hon" style="border-collapse: collapse; width: 100%;" border="1">
+    <tbody>
+    <tr>
+    <td style="width: 45%; text-align: center;">
+    <p>Nhà gái</p>
+    <p>Lưu Hữu Minh</p>
+    <p>Lê Thị Minh Phụng</p>
+    </td>
+    <td style="width: 10%; text-align: center;font-size: 60px;">💕</td>
+    <td style="width: 45%; text-align: center;">
+    <p>Nhà trai</p>
+    <p>Nguyễn Văn Bình</p>
+    <p>Cao Thị Hồng</p>
+    </td>
     </tr>
     </tbody>
   </table>
+
 </div>
 
 <!-- Chèn khoảng trống -->
@@ -95,7 +121,7 @@ bigimg:
 <div class="thiep_moi">
   <h2 style="text-align: center;">Trân trọng kính mời!</h2>
   <p style="text-align: center;">
-    TỚI DỰ BỮA TRƯA THÂN MẬT CÙNG GIA ĐÌNH CHUNG TÔI<br />
+    TỚI DỰ BỮA TRƯA THÂN MẬT<br />CÙNG GIA ĐÌNH CHÚNG TÔI<br />
     VÀO LÚC 11H30 Chủ Nhật<br />
     12/02/2023<br />
     Nhằm ngày 22 tháng 1 năm Quý Mão<br />
@@ -104,9 +130,11 @@ bigimg:
     Địa chỉ: 126A Nguyễn Tất Thành, Phước Nguyễn, Bà Rịa, Bà Rịa - Vũng Tàu</p>
 </div>
 
-
 <!-- Chèn khoảng trống -->
 <div class="spacer"></div>
+<br />
+<h2 style="text-align: center;">Những tháng năm rực rỡ ...</h2>
+
 <!-- site body (untouched)-->
 <div class="posts-list">
   {% for post in paginator.posts %}
