--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@ bigimg:
 <div class="thiep_moi">
   <h2 style="text-align: center;">Lễ Vu Quy</h2>
   <p style="text-align: center;">
-    Được tổ chức vào lúc 11h00 Thứ 6<br />
+    Được tổ chức vào lúc 18h00 Thứ 6<br />
     10/02/2023<br />
     Nhằm ngày 20 tháng 1 năm Quý Mão<br />
-    Tại nhà gái - Tư gia - Châu Pha, Phú Mỹ<br />
+    Tại Thánh Đường Giáo Xứ Châu Pha<br />
     <br />
     Sự hiện diện của quý khách là niềm vinh hạnh của gia đình chúng tôi<br />
   </p>
@@ -72,40 +72,27 @@ bigimg:
 <div class="thiep_moi">
   <h2 style="text-align: center;">Lễ Tân Hôn</h2>
   <p style="text-align: center;">
-    Được tổ chức vào hồi 11h00 Chủ Nhật<br />
+    Được tổ chức vào lúc 09h00 Chủ Nhật<br />
     12/02/2023<br />
     Nhằm ngày 22 tháng 1 năm Quý Mão<br />
     Tại nhà trai - Tư gia Long Toàn, Bà Rịa<br />
     <br />
     Sự hiện diện của quý khách là niềm vinh hạnh của gia đình chúng tôi<br />
   </p>
-  
-  <!-- <table class="thiep_moi_thanh_hon" style="border-collapse: collapse; width: 100%;" border="1">
-    <tbody>
-    <tr>
-    <td style="width: 45%; text-align: center;">Nh&agrave; G&aacute;i</td>
-    <td style="width: 10%; text-align: center;font-size: 40px;">👩‍❤️‍💋‍👨</td>
-    <td style="width: 45%; text-align: center;">Nh&agrave; Trai</td>
-    <td style="width: 45%; text-align: center;">Lưu Hữu Minh<br />Lê Thị Minh Phụng</td>
-    <td style="width: 10%; text-align: center;font-size: 40px;">💕</td>
-    <td style="width: 45%; text-align: center;">Nguyễn Văn Bình<br />Cao Thị Hồng</td>
-    </tr>
-    </tbody>
-  </table> -->
 
   <table class="thiep_moi_thanh_hon" style="border-collapse: collapse; width: 100%;" border="1">
     <tbody>
     <tr>
     <td style="width: 45%; text-align: center;">
-    <p>Nhà gái</p>
-    <p>Lưu Hữu Minh</p>
-    <p>Lê Thị Minh Phụng</p>
+      <p>Nhà trai</p>
+      <p>Nguyễn Văn Bình</p>
+      <p>Cao Thị Hồng</p>
     </td>
     <td style="width: 10%; text-align: center;font-size: 60px;">💕</td>
     <td style="width: 45%; text-align: center;">
-    <p>Nhà trai</p>
-    <p>Nguyễn Văn Bình</p>
-    <p>Cao Thị Hồng</p>
+      <p>Nhà gái</p>
+      <p>Lưu Hữu Minh</p>
+      <p>Lê Thị Minh Phụng</p>
     </td>
     </tr>
     </tbody>
@@ -119,6 +106,9 @@ bigimg:
 <div class="spacer"><br /></div>
 
 <div class="thiep_moi">
+  <div class="post-img-post">
+    <img src="/img/Wedding/Nhan_cuoi.JPG"><br>
+  </div>
   <h2 style="text-align: center;">Trân trọng kính mời!</h2>
   <p style="text-align: center;">
     TỚI DỰ BỮA TRƯA THÂN MẬT<br />CÙNG GIA ĐÌNH CHÚNG TÔI<br />
@@ -130,10 +120,6 @@ bigimg:
     Địa chỉ: 126A Nguyễn Tất Thành, Phước Nguyễn, Bà Rịa, Bà Rịa - Vũng Tàu</p>
 </div>
 
-<!-- Chèn khoảng trống -->
-<div class="spacer"></div>
-<br />
-<h2 style="text-align: center;">Những tháng năm rực rỡ ...</h2>
 
 <!-- site body (untouched)-->
 <div class="posts-list">
