--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@ permalink: /404.html
 ---
 
 <div class="text-center">
-  <a target="_blank" rel="noopener" href="https://bangnguyendev.github.io" class="project-link" title="Go to Home Page">
+  <a target="_blank" rel="noopener" href="/" class="project-link" title="Go to Home Page">
     <img src="{{ site.baseurl }}/img/error-404.webp" class="img-rounded" alt="404 - Page not found - NDB" width="80%" />
   </a>
 </div>
