Cập nhật giao diện mới, bổ sung Topic phân loại nội dung bài viết.

--- a/index.html
+++ b/index.html
@@ -22,53 +22,49 @@ bigimg:
 
 <!-- Projects have released -->
 <div class="spacer"></div>
+<!-- Projects have released -->
+<div class="spacer"></div>
 <div class="row text-center">
   <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center">
     <div class="project-card">
-      {%- assign gh-user = "bangnguyendev"-%}
-      {%- assign gh-project = "SmartClock" -%}
-      <span class="fa-stack fa-2x">
-        <i class="fa fa-square fa-stack-2x stack-color"></i>
-        <i class="fa fa-hourglass-half fa-stack-1x fa-inverse"></i>
-      </span>
-      <a target="_blank" href="https://github.com/{{- gh-user -}}/{{- gh-project -}} " rel="noopener" class="project-link"
-        title="Go to Github Poject Page">
-        <h4>{{- gh-project -}}</h4>
+      <a target="_blank" href="/Topic/lap-trinh-vi-dieu-khien " rel="noopener" class="project-link"
+        title="Programming MCU">
+        <span class="fa-stack fa-2x">
+          <i class="fa fa-square fa-stack-2x stack-color"></i>
+          <i class="fa fa-microchip fa-stack-1x fa-inverse"></i>
+        </span>
+        <h4>Programming MCU</h4>
       </a>
       <!-- <hr class="seperator"> -->
-      <p class="text-muted"><img alt="GitHub release (latest by date)" src="https://img.shields.io/github/v/release/{{- gh-user -}}/{{- gh-project -}}?color=success&logo=github"><br>Room decoration clock.<br>Temperature, humidity.<br>Alarm, birthday.</p>
+      <p class="text-muted">Programming MCU, STM32, Arduino32bit, ESP32, ESP8266...</p>
     </div>
   </div>
   <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center">
     <div class="project-card">
-      {%- assign gh-project = "VehicleSpeedGPS" -%}
-      <span class="fa-stack fa-2x">
-        <i class="fa fa-square fa-stack-2x stack-color"></i>
-        <i class="fa fa-map fa-stack-1x fa-inverse"></i>
-      </span>
-      <a target="_blank" href="https://github.com/{{- gh-user -}}/{{- gh-project -}}" rel="noopener" class="project-link"
-        title="Go to Github Poject Page">
-        <h4>{{- gh-project -}}</h4>
+      <a target="_blank" href="/Topic/dien-dien-tu" rel="noopener" class="project-link"
+        title="Electronic components">
+        <span class="fa-stack fa-2x">
+          <i class="fa fa-square fa-stack-2x stack-color"></i>
+          <i class="fa fa-microchip fa-stack-1x fa-inverse"></i>
+        </span>
+        <h4>Electronic Components</h4>
       </a>
       <!-- <hr class="seperator"> -->
-      <p class="text-muted"><img alt="GitHub release (latest by date)" src="https://img.shields.io/github/v/release/{{- gh-user -}}/{{- gh-project -}}?color=success&logo=github"><br>Put data to LCD.<br>Measure movement speed and altitude above sea level. </p>
+      <p class="text-muted">Share knowledge about electronics, electronic components</p>
     </div>
   </div>
   <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center">
     <div class="project-card">
-      {%- assign gh-project = "SentDataThingSpeak" -%}
-      <span class="fa-stack fa-2x">
-        <i class="fa fa-square fa-stack-2x stack-color"></i>
-        <i class="fa fa-comments fa-stack-1x fa-inverse"></i>
-      </span>
-      <a target="_blank" href="https://github.com/{{- gh-user -}}/{{- gh-project -}}" rel="noopener" class="project-link"
-        title="Go to Github Poject Page">
-        <h4>{{- gh-project -}}</h4>
+      <a target="_blank" href="/Topic/ngoai-luong" rel="noopener" class="project-link"
+        title="Ngoài luồng">
+        <span class="fa-stack fa-2x">
+          <i class="fa fa-square fa-stack-2x stack-color"></i>
+          <i class="fa fa-comments fa-stack-1x fa-inverse"></i>
+        </span>
+        <h4>Social sciences</h4>
       </a>
       <!-- <hr class="seperator"> -->
-      <p class="text-muted"><img alt="GitHub release (latest by date)" src="https://img.shields.io/github/v/release/{{- gh-user -}}/{{- gh-project -}}?color=success&logo=github"><br>Send and receive data between phone and <a
-          href="https://github.com/bangnguyendev/SmartClock" target="_blank" rel="noopener"
-          title="Go to Github Poject Page">SmartClock</a> project.<br>HTTP Methods GET vs POST.
+      <p class="text-muted">Sharing knowledge of social sciences
       </p>
     </div>
   </div>
