--- a/Topic/dien-dien-tu.html
+++ b/Topic/dien-dien-tu.html
@@ -2,12 +2,15 @@
 layout: page
 title: Electronic Components
 meta-title: Electronic Components
-subtitle: "...Share knowledge about electronics, electronic components"
+subtitle: "Share knowledge about electronics, electronic components"
 bigimg:
   - "/Topic/dien-dien-tu.webp"
 ---
 
 <div class="posts">
+  <!-- Check hascategoryPosts -->
+  {% assign hascategoryPosts = false %}
+
   {% for post in site.posts %}
 
     {% assign author = site.authors[post.author] %}
@@ -63,7 +66,18 @@ bigimg:
           </div>
           {% endif %}
       
-    </div>
+    </div>  
+      <!-- Check hascategoryPosts -->
+      {% assign hascategoryPosts = true %}
     {% endif %}
   {% endfor %}
+
+  <!-- Report hascategoryPosts -->
+  {% unless hascategoryPosts %}
+  <div class="text-center">
+    <a target="_blank" rel="noopener" href="/" class="project-link" title="Go to Home Page">
+      <img src="{{ site.baseurl }}/img/error-404.webp" class="img-rounded" alt="404 - Page not found" width="80%" />
+    </a>
+  </div>
+  {% endunless %}
 </div>
