Cập nhật giao diện, thêm background web

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@ title: Bằng Nguyễn
 subtitle: The only source of knowledge is experience.
 meta-title: "Hi, I'm Bang"
 bigimg:
-- "/img/My_Picture/Baria_garden.webp" : "Bà Rịa City"
-
+- "/img/Affiliate/banner.png"
 ---
 <!-- Data typed chạy chữ.  -->
 <div class="typed_caption">
