Remove Typed.js

--- a/index.html
+++ b/index.html
@@ -6,18 +6,6 @@ meta-title: "Hi, I'm Bang"
 bigimg:
 - "/img/Affiliate/banner.png"
 ---
-<!-- Data typed chạy chữ.  -->
-<div class="typed_caption">
-  <div class="col-sm-12">
-    <div class="text-center">
-      <h2>I write about <span id="word" style="color:#890000";></span></h2>
-    </div>
-  </div>
-</div>
-<!-- JS typed chạy chữ.  -->
-<script src="/js/Typed.js"></script> 
-
-<!-- Projects have released -->
 <div class="spacer"></div>
 <!-- Projects have released -->
 <div class="spacer"></div>
@@ -67,6 +55,7 @@ bigimg:
   </div>
 </div>
 
+<hr class="small">
 <!-- Recent Posts -->
 <h1 class="text-center">Recent Posts</h1>
 <!-- Chèn khoảng trống -->
