Cải thiện hiệu suất load trang, SEO

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Bằng Nguyễn
 subtitle: The only source of knowledge is experience.
 meta-title: "Hi, I'm Bang"
 bigimg:
-- "/img/Affiliate/banner.png"
+- "/img/Affiliate/banner.webp"
 ---
 
 <hr class="small">
