--- a/Topic/Electronic components.html
+++ b/Topic/Electronic components.html
@@ -4,7 +4,7 @@ title: Electronic Components
 meta-title: Electronic Components
 subtitle: "Share knowledge about electronics, electronic components"
 bigimg:
-  - "/Topic/Electronic components.webp"
+  - "/Topic/Electronic-components.webp"
 ---
 
 <div class="posts">
