--- a/Topic/Social sciences.html
+++ b/Topic/Social sciences.html
@@ -4,7 +4,7 @@ title: Social Sciences
 meta-title: Social Sciences
 subtitle: "Sharing knowledge of social sciences..."
 bigimg:
-  - "/Topic/Programming MCU.jpeg"
+  - "/Topic/Programming-MCU.jpeg"
 ---
 
 <div class="posts">  
