--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ bigimg:
           {% assign excerpt_word_count = post.excerpt | number_of_words %}
           {% if post.content != post.excerpt or excerpt_word_count > site.excerpt_length %}
         </p>
-        <a href="{{ post.url | prepend: site.baseurl }}" class="post-read-more">[Read More]</a>
+        <a href="{{ post.url | prepend: site.baseurl }}" class="post-read-more">Read More...</a>
         {% endif %}
       </div>
     </div>
